--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,3 +53,30 @@
     background: transparent;
   }
 }
+
+#project-detail iframe {
+  width: 100%;
+  height: 200px;
+}
+
+#project-detail-description {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-weight: 500;
+    font-size: 20px;
+    margin-bottom: 12px;
+  }
+
+  ol {
+    list-style-type: decimal;
+    margin-left: 20px;
+  }
+
+  ol li {
+    margin-bottom: 8px;
+  }
+}
